[package]
name = "async_queue_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.7.0", features = ["user-operations", "derive"] }
chrono = "0.4"
futures = "0.3"
tokio = { version = "1.36.0", features = ["time"] }
